<?xml version="1.0"?>
<package format="2">
  <name>kobuki_zed_orb_slam3</name>
  <version>0.0.0</version>
  <description>The kobuki_zed_orb_slam3 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhuang5@wpi.edu">Zhanhong Huang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>kobuki_capabilities</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>kobuki_bumper2pc</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>
  <exec_depend>create_node</exec_depend>
  <exec_depend>turtlebot_capabilities</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_pose_ekf</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>zed_ros</exec_depend>
  <exec_depend>zed_nodelets</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
